feat: Implement unified search functionality for users and trips (#99)
* feat: Implement unified search functionality for users and trips

* feat: Refactor TripServiceTest to utilize TripEnrichmentHelper for usernames and promoted trips

* feat: Enhance unified search functionality with independent pagination for users and trips

* feat: Temporarily disable caching in getTripUpdatesForTrip due to serialization issue with Pageable.sort

* feat: Optimize trip retrieval by batch fetching trip updates to reduce N+1 queries

* feat: Add update count to trips for improved thumbnail selection logic

* test: Add updateCount parameter to trip summary DTOs in tests

* test: Add TripUpdateRepository mock to TripServiceTest for improved trip retrieval tests

* feat: Batch fetch trip updates to improve trip maintenance stats and update counts

* test: Mock tripUpdateRepository in TripServiceTest for improved maintenance stats retrieval

* feat: Enhance trip retrieval by including trip updates and updating mapper configuration

* refactor: Remove caching annotations from notification and trip services

* refactor: Remove caching annotations from notification and trip services

* refactor: Simplify thumbnail URL resolution logic in TripDTO and TripSummaryDTO

* refactor: Enhance TripDTO and TripEnrichmentHelper to include comments and update counts

* refactor: Update TripServiceTest to use lenient stubbing for trip enrichment helper methods